--- a/gs-validating-form-input-complete/src/main/resources/templates/users/index.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/users/index.html
@@ -71,6 +71,7 @@
 					<td th:text="${resultU.id}"></td>
 					<td th:text="${resultU.name}"></td>
 					<td th:text="${resultU.email}"></td>
+					<td><a th:href="@{/users/user/{id}(id=${resultU.id})}"><span>View</span></a></td>
 				</tr>
 			</table>
         </div>
