--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/header.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/header.html
@@ -35,8 +35,7 @@
 			</div>
 				
 				      
-            <form class="form" action="" method="POST">
-                
+            <form class="form" th:action="@{/receipt}" th:object="${rh}"  action="" method="POST">
 				
 				<div class="field">
                     <label class="label">Date</label>
