1) Solve date format issue from UI 2) Change some date format in POJO to latest Java8 datetime format

--- a/gs-validating-form-input-complete/src/main/resources/templates/index.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 								<!-- <p class="subtitle">Top tile</p> -->
 				        	</a>
 							
-							<a class="tile is-child notification is-info" th:href="@{/insert/}">
+							<a class="tile is-child notification is-info" th:href="@{/receipt/}">
 								<p class="title is-1">Insert</p>
 								<!-- <p class="subtitle">Bottom tile</p> -->
 							</a>
