--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/header.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/header.html
@@ -35,12 +35,13 @@
 			</div>
 				
 				      
-            <form class="form" th:action="@{/receipt}" th:object="${rh}"  action="" method="POST">
+            <form class="form" th:action="@{/receipt}" th:object="${req}"  action="" method="POST">
 				
 				<div class="field">
                     <label class="label">Date</label>
                     <div class="control">
-                        <input type="text" class="input date" name="date"/>
+                        <input type="text" class="input date" name="date" placeholder="yyyy-MM-dd HH:mm"
+                        	   th:field="*{date}"/>
                     </div>
                 </div>
 
@@ -48,38 +49,38 @@
                 <div class="field">
                     <label class="label">Name</label>
                     <div class="control">
-                        <input class="input" name="name" type="text" placeholder="e.g NamaName"/>
+                        <input class="input" name="name" type="text" th:field="*{name}" placeholder="e.g NamaName"/>
                     </div>
                 </div>
 
                 <div class="field">
                     <label class="label">Street Address</label>
                     <div class="control">
-                        <input class="input" name="street" type="text" placeholder="e.g 42S, University Pl, Apt 4"/>
+                        <input class="input" name="street" type="text" th:field="*{street}" placeholder="e.g 42S, University Pl, Apt 4"/>
                     </div>
                 </div>
 
                 <div class="field is-grouped">
                     <div class="control">
                         <label class="label">City</label>
-                        <input class="input" name="city" type="text" placeholder="e.g Stillwater"/>
+                        <input class="input" name="city" type="text" th:field="*{city}" placeholder="e.g Stillwater"/>
                     </div>
                     <div class="control">
                         <label class="label">Zip Code</label>
-                        <input class="input" name="code" type="text" placeholder="e.g 74075"/>
+                        <input class="input" name="code" type="text" th:field="*{code}" placeholder="e.g 74075"/>
                     </div>
                     <div class="control">
                         <label class="label">State</label>
-                        <input class="input" name="state" type="text" placeholder="e.g Oklahoma"/>
+                        <input class="input" name="state" type="text" th:field="*{state}" placeholder="e.g Oklahoma"/>
                     </div>
                     <div class="control">
                         <label class="label">Country</label>
-                        <input class="input" name="country" type="text" placeholder="e.g US"/>
+                        <input class="input" name="country" type="text" th:field="*{country}" placeholder="e.g US"/>
                     </div>
                 </div>
 
                 <div class="control">
-                    <button class="button is-primary">Submit</button>
+                    <button class="button is-primary" th:value="#{form.submit}">Submit</button>
                 </div>
             </form>
         </div>
