--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/header.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/header.html
@@ -40,8 +40,7 @@
 				<div class="field">
                     <label class="label">Date</label>
                     <div class="control">
-                        <input type="text" class="input date" name="date" placeholder="yyyy-MM-dd HH:mm"
-                        	   th:field="*{date}"/>
+                        <input class="input date" type="text" name="date" placeholder="yyyy-MM-dd HH:mm" th:field="*{date}"/>
                     </div>
                 </div>
 
