--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
@@ -2,13 +2,23 @@
 <html lang="en">
 
 <head>
+
     <title></title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" th:href="@{/css/bulma.css}"/>
-
+    
+    <!-- CDN CSS  -->
     <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.1.4/flatpickr.min.css}"/>
-    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}"/>
+    <!-- <link rel="stylesheet" th:href="@{/css/fontawesome-all.css}"/> -->
+    <link rel="stylesheet" th:href="@{/css/bulma.css}"/>
+    <!-- Custom CSS  -->
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    
+    <!-- Script  -->
+    <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js}"></script>
+    <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+    
 </head>
 
 <body>
@@ -32,7 +42,10 @@
 				
 				      
             <form class="form" th:action="@{/receipt/detail}" th:object="${detail}" action="" method="POST">
-	            <div class="field">
+	            <div id="table">
+	            	
+            		<span class="table-add has-text-success is-medium"><i class="iconz fas fa-plus fa-2x"></i></span>
+
 	            	<table class="table">
 	            		<thead>
 							<tr>
@@ -42,6 +55,7 @@
 						        <th>Unit Price</th>
 						        <th>Price</th>
 						        <th>Tax</th>
+						        <th></th>
 					      	</tr>
 				      	</thead>
 				      	<tbody>
@@ -49,57 +63,26 @@
 							<tr class="control">
 								<th>1</th>
 								<td><input class="input" type="text" th:field="*{name}"/></td>
-								<td><input class="input numnber" type="number" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input class="input numnber" type="number" th:field="*{unitPrice}" placeholder="123"/></td>
-								<td><input class="input numnber" type="number" th:field="*{price}" placeholder="123"/></td>
+								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
+								<td><input class="input" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123"/></td>
+								<td><input class="input" type="number" step="0.01" min="0" th:field="*{price}" placeholder="123"/></td>
 								<td><input class="checkbox" type="checkbox" th:field="*{tax}" placeholder="true"/></td>
+								<td><span class="icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
+
+							<tr class="hide">
+						    	<th>1</th>
+								<td><input class="input" type="text" th:field="*{name}"/></td>
+								<td><input class="input" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
+								<td><input class="input" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123"/></td>
+								<td><input class="input" type="number" step="0.01" min="0" th:field="*{price}" placeholder="123"/></td>
+								<td><input class="checkbox" type="checkbox" th:field="*{tax}" placeholder="true"/></td>
+								<td><span class="icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
+							</tr>
+							
 						</tbody>
 					</table>
 				</div>
-            
-            
-            
-            
-				<div class="field">
-                    <label class="label">Date</label>
-                    <div class="control">
-                        <input class="input date" type="text" name="date"/>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Name</label>
-                    <div class="control">
-                        <input class="input" name="name" type="text" placeholder="e.g NamaName"/>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Street Address</label>
-                    <div class="control">
-                        <input class="input" name="street" type="text" placeholder="e.g 42S, University Pl, Apt 4"/>
-                    </div>
-                </div>
-
-                <div class="field is-grouped">
-                    <div class="control">
-                        <label class="label">City</label>
-                        <input class="input" name="city" type="text" placeholder="e.g Stillwater"/>
-                    </div>
-                    <div class="control">
-                        <label class="label">Zip Code</label>
-                        <input class="input" name="code" type="text" placeholder="e.g 74075"/>
-                    </div>
-                    <div class="control">
-                        <label class="label">State</label>
-                        <input class="input" name="state" type="text" placeholder="e.g Oklahoma"/>
-                    </div>
-                    <div class="control">
-                        <label class="label">Country</label>
-                        <input class="input" name="country" type="text" placeholder="e.g US"/>
-                    </div>
-                </div>
 
                 <div class="control">
                     <button class="button is-primary">Submit</button>
@@ -109,7 +92,7 @@
     </section>
 
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.1.4/flatpickr.min.js}"></script>
-    <script th:src="@{/script/script.js}"></script>
+    <script th:src="@{/script/script.js}"></script>   
 </body>
 
 </html>
