Auto populate serial no.

--- a/gs-validating-form-input-complete/src/main/resources/templates/index.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/index.html
@@ -28,8 +28,8 @@
 				      	</div>
 				      
 				      	<div class="tile is-parent is-vertical">
-							<a class="tile is-child notification is-warning" th:href="@{/future1/}">
-								<p class="title is-1">Some future stuff</p>
+							<a class="tile is-child notification is-warning" th:href="@{/receipt/detail}">
+								<p class="title is-1">Detail!</p>
 								<!-- <p class="subtitle">Top tile</p> -->
 				        	</a>
 							
