--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
@@ -71,7 +71,7 @@
 							</tr>
 
 							<tr class="hide">
-						    	<th>1</th>
+						    	<th id="srnos">2</th>
 								<td><input class="input" type="text" th:field="*{name}"/></td>
 								<td><input class="input" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
 								<td><input class="input" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123"/></td>
