--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
@@ -63,19 +63,19 @@
 							<tr class="control">
 								<th style="text-align:right">1</th>
 								<td><input class="input" type="text" th:field="*{name}"/></td>
-								<td><input class="input qty" type="number" min="1" id="qty" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input class="input" type="number" step="0.01" min="0" id="uPrice" th:field="*{unitPrice}" placeholder="123.00"/></td>
-								<td id="price"><input class="input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
+								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
+								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
+								<td class="price"><input class="input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
 								<td><input class="checkbox" type="checkbox" th:field="*{tax}" placeholder="true"/></td>
 								<td><span class="icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
-
+							
 							<tr class="hide">
 						    	<th id="srnos" style="text-align:right">2</th>
 								<td><input class="input" type="text" th:field="*{name}"/></td>
-								<td><input class="input qty" type="number" min="1" id="qty" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input class="input" type="number" step="0.01" min="0" id="uPrice" th:field="*{unitPrice}" placeholder="123.00"/></td>
-								<td><input class="input" type="number" step="0.01" min="0" id="" th:field="*{price}" placeholder="123.00"/></td>
+								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
+								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
+								<td class="price"><input class="input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
 								<td><input class="checkbox" type="checkbox" th:field="*{tax}" placeholder="true"/></td>
 								<td><span class="icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
