--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
@@ -88,7 +88,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Total:</th>
-								<td id="total"><input class="input" type="hidden" step="0.01" min="0" placeholder="123.00"/></td>
+								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" min="0" placeholder="123.00"/></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -117,7 +117,7 @@
 								<th></th>
 								<th></th>
 								<th></th>
-								<th style="text-align:right">Total:</th>
+								<th style="text-align:right">Grand Total:</th>
 								<td id="Grandtotal"><input class="input" type="hidden"/></td>
 								<td></td>
 								<td></td>
