--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
@@ -41,7 +41,7 @@
 			</div>
 				
 				      
-            <form class="form" th:action="@{/receipt/processDetail}" th:object="${det}" action="" method="POST">
+            <form class="form" th:action="@{/receipt/processDetail}" th:object="${detail}" action="" method="POST">
 	            <div id="table">
 	            	
             		<span class="table-add has-text-success is-medium"><i class="iconz fas fa-plus fa-2x"></i></span>
@@ -60,26 +60,26 @@
 				      	</thead>
 				      	<tbody>
 				      	
+				      		<tr class="hide">
+						    	<th id="srnos" style="text-align:right">2</th>
+								<td><input class="input" type="text" th:field="*{name}"/></td>
+								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
+								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
+								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
+								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><input class="checkbox" type="checkbox" th:field="*{dummyTax}"/></td>
+								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
+							</tr>
+							
 							<tr class="control">
 								<th style="text-align:right">1</th>
 								<td><input class="input" type="text" th:field="*{name}"/></td>
 								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
 								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
 								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
-								<td><input class="checkbox" type="checkbox" th:field="*{tax}" placeholder="true"/></td>
+								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><input class="checkbox" type="checkbox" th:field="*{dummyTax}"/></td>
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
-							
-							<tr class="hide">
-						    	<th id="srnos" style="text-align:right">2</th>
-								<td><input class="input" type="text" th:field="*{name}"/></td>
-								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
-								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
-								<td><input class="checkbox" type="checkbox" th:field="*{tax}" placeholder="true"/></td>
-								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
-							</tr>
-							
+
 						</tbody>
 						<tfoot>
 							<!-- Total -->
@@ -88,7 +88,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Total:</th>
-								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" min="0" th:field="total"/></td>
+								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" min="0" th:field="*{total}"/></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -98,7 +98,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Tax:</th>
-								<td><div id="taxText"></div><input id="taxVal" class="input" type="hidden" value="0.00" th:field="*{totalTax}"/></td>
+								<td><div id="taxText"></div><input id="taxVal" class="input hide" type="number" th:field="*{totalTax}"/></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -127,7 +127,7 @@
 				</div>
 
                 <div class="control">
-                    <button class="button is-primary">Submit</button>
+                    <button id="saveDetail" class="button is-primary" th:value="#{form.submit}">Submit</button>
                 </div>
             </form>
         </div>
