--- a/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
+++ b/gs-validating-form-input-complete/src/main/resources/templates/receipt/detail.html
@@ -60,23 +60,37 @@
 				      	</thead>
 				      	<tbody>
 				      	
-				      		<tr class="hide">
+				      	<!-- 	<tr class="hide">
 						    	<th id="srnos" style="text-align:right">2</th>
-								<td><input class="input" type="text" th:field="*{name}"/></td>
-								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
-								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
+								<td><input required="required" class="input" type="text" th:field="*{name}"/></td>
+								<td><input required="required" class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
+								<td><input required="required" class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
+								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}"/></td>
+								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><button class="icon is-medium taxBox"><i class="iconz fas fa-usd"></i></button></td>
 								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><input class="checkbox" type="checkbox" th:field="*{dummyTax}"/></td>
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
-							</tr>
+							</tr> -->
 							
 							<tr class="control">
 								<th style="text-align:right">1</th>
-								<td><input class="input" type="text" th:field="*{name}"/></td>
-								<td><input class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
-								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}" placeholder="123.00"/></td>
-								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><input class="checkbox" type="checkbox" th:field="*{dummyTax}"/></td>
+								<td>
+									<input required="required" class="input" type="text" th:field="*{name}"/>
+								</td>
+								<td>
+									<input required="required" class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/>
+								</td>
+								<td>
+									<input required="required" class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/>
+								</td>
+								<td>
+									<div class="price"></div>
+									<input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}"/>
+								</td>
+								<td>
+									<input class="indiTax" type="hidden" th:field="*{tax}"/>
+									<a class="button taxBox iconz is-primary is-outlined is-inverted fas fa-usd"></a>
+								</td>
+								<!-- <td><input class="indiTax hide" type="number" th:field="*{tax}"/><span class="icon is-medium taxBox"><i class="iconz fas fa-usd"></i></span></td> -->
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
 
@@ -88,7 +102,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Total:</th>
-								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" min="0" th:field="*{total}"/></td>
+								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" th:field="*{total}"/></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -98,7 +112,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Tax:</th>
-								<td><div id="taxText"></div><input id="taxVal" class="input hide" type="number" th:field="*{totalTax}"/></td>
+								<td><div id="taxText"></div><input id="taxVal" class="input" type="hidden" th:field="*{totalTax}"/></td>
 								<td></td>
 								<td></td>
 							</tr>
