--- a/project-receipt/src/main/resources/static/css/style.css
+++ b/project-receipt/src/main/resources/static/css/style.css
@@ -11,13 +11,13 @@ body{
 }
 
 section{
-    padding: 5rem 0;
+    padding: 1rem 0;
 }
 
 .form{
-    max-width: 960px;
+    /*max-width: 960px;*/
     margin: 0 auto;
-    padding: 2rem;
+    padding: 1.5rem;
     border: 1px solid #eee;
 }
 
