--- a/project-receipt/src/main/resources/templates/index.html
+++ b/project-receipt/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title></title>
@@ -33,8 +33,8 @@
 								<!-- <p class="subtitle">Top tile</p> -->
 				        	</a>
 							
-							<a class="tile is-child notification is-danger" th:href="@{/future2/}">
-								<p class="title is-1">Some future stuff</p>
+							<a class="tile is-child notification is-danger" th:href="@{/receipt/}">
+								<p class="title is-1">Receipt!</p>
 								<!-- <p class="subtitle">Bottom tile</p> -->
 							</a>
 				      	</div>
