--- a/project-receipt/src/main/resources/templates/receipt/detail.html
+++ b/project-receipt/src/main/resources/templates/receipt/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -60,16 +60,28 @@
 				      	</thead>
 				      	<tbody>
 				      	
-				      	<!-- 	<tr class="hide">
+				      		<tr class="hide">
 						    	<th id="srnos" style="text-align:right">2</th>
-								<td><input required="required" class="input" type="text" th:field="*{name}"/></td>
-								<td><input required="required" class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/></td>
-								<td><input required="required" class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/></td>
-								<td><div class="price"></div><input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}"/></td>
-								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><button class="icon is-medium taxBox"><i class="iconz fas fa-usd"></i></button></td>
-								<td><input class="indiTax hide" type="number" th:field="*{tax}"/><input class="checkbox" type="checkbox" th:field="*{dummyTax}"/></td>
+								<td>
+									<input required="required" class="input" type="text" th:field="*{name}"/>
+								</td>
+								<td>
+									<input required="required" class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/>
+								</td>
+								<td>
+									<input required="required" class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/>
+								</td>
+								<td>
+									<div class="price"></div>
+									<input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}"/>
+								</td>
+								<td>
+									<input class="indiTax" type="hidden" th:field="*{tax}"/>
+									<a class="button taxBox iconz is-primary is-outlined is-inverted fas fa-usd"></a>
+								</td>
+								<!-- <td><input class="indiTax hide" type="number" th:field="*{tax}"/><span class="icon is-medium taxBox"><i class="iconz fas fa-usd"></i></span></td> -->
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
-							</tr> -->
+							</tr>
 							
 							<tr class="control">
 								<th style="text-align:right">1</th>
