--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -222,7 +222,7 @@
 				</div>
 				
                 <div class="control has-text-centered">
-                    <button class="button is-primary" th:value="#{form.submit}">Down down details</button>
+                    <button id="saveTransaction" class="button is-primary" th:value="#{form.submit}">Down down details</button>
                 </div>
             </form>
         </div>
