--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -22,7 +22,7 @@
 			<nav class="navbar">
 				<div class="container">
 		        	<div class="navbar-brand">
-		          		<a class="navbar-item is-active">
+		          		<a class="navbar-item is-active" th:href="@{/receipt/}">
 		            		Home
 		          		</a>
 		          		
@@ -60,53 +60,137 @@
     <section>	
         <div class="container">        
             <form class="form" th:action="@{/receipt/process}" th:object="${request}" action="" method="POST">
+            
+            
+          <!--   <div class="tile is-ancestor">
+            	
+            
+            
+            </div> -->
+            
+            
+            
+            
+				<div class="field is-horizontal">
+					<div class="field-label">
+	                    <label class="label">Date</label>
+                    </div>
+                    <div class="field-body">
+                    	<div class="field">
+		                    <div class="control is-expanded">
+		                        <input class="input date" type="text" name="date" required="required" placeholder="yyyy-MM-dd HH:mm" th:field="*{date}"/>
+		                    </div>
+	                    </div>
+	                </div>
+               </div>
+                
+                <div class="field is-horizontal">
+	                <div class="field-label">
+	                    <label class="label">Store Name</label>
+                    </div>
+                    <div class="field-body">
+                    	<div class="field">
+		                    <div class="control is-expanded">
+		                        <input class="input" name="name" type="text" required="required" placeholder="NamaName" th:field="*{storeName}"/>
+		                    </div>
+	                    </div>
+	                </div>
+                </div>
+                
+                <div class="field is-horizontal">
+					<div class="field-label is-normal">
+				    	<label class="label">Address</label>
+				  	</div>
+				  	<div class="field-body">
+				    	<div class="field is-narrow">
+				      		<div class="control">
+				        		<div class="select is-fullwidth">
+				          			<select>
+				            			<option>20, Jalan 1, Sungai Dua, Pisang, US</option>
+				            			<option>21, Jalan 1, Sungai Dua, Pisang, US</option>
+				            			<option>22, Jalan 1, Sungai Dua, Pisang, US</option>
+				          			</select>
+				        		</div>
+				      		</div>
+			    		</div>
+					</div>
+				</div>
+                
+                <div class="field is-horizontal is-grouped">
+					<div class="field-label is-normal">
+				    	<label class="label">Payment type</label>
+				  	</div>
+				 	<div class="field is-narrow">
+				      	<div class="control">
+				        	<div class="select is-fullwidth">
+				         			<select>
+				           			<option>Discover</option>
+				           			<option>Chase bank</option>
+				           			<option>Chase credit</option>
+				         			</select>
+				        	</div>
+				      	</div>
+		    		</div>
+					
+					<div class="field-label is-normal">
+				    	<label class="label">Transaction type</label>
+				  	</div>
+			    	<div class="field is-narrow">
+			      		<div class="control">
+			        		<div class="select is-fullwidth">
+			          			<select>
+			            			<option>Grocery</option>
+			            			<option>Restaurant</option>
+			            			<option>Mall</option>
+			          			</select>
+			        		</div>
+			      		</div>
+		    		</div>
+				</div>
+                
+                
+                
+                
+               <!--  <div>
+	                
+	
+	                <div class="field">
+	                    <label class="label">Street Address</label>
+	                    <div class="control">
+	                        <input class="input" name="street" type="text" required="required" placeholder="42S, University Pl, Apt 4" th:field="*{street}" />
+	                    </div>
+	                </div>
+	
+	                <div class="field is-grouped">
+	                    
+						<div class="control is-expanded">
+							<label class="label">City</label>
+	                       	<input class="input" name="city" type="text" required="required" placeholder="Stillwater" th:field="*{city}" />
+	                   	</div>
+	                   	
+	                    
+	                    <div class="control">
+	                    	<label class="label">Zip Code</label>
+	                        <input class="input" name="code" type="text" required="required" placeholder="74075" th:field="*{code}" />
+	                    </div>
+	                    
+	                   
+	                    <div class="control is-expanded">
+	                     	<label class="label">State</label>
+	                        <input class="input" name="state" type="text" required="required" placeholder="Oklahoma" th:field="*{state}" />
+	                    </div>
+	                    
+	                    
+	                    <div class="control">
+	                    	<label class="label">Country</label>
+	                        <input class="input" name="country" type="text" required="required" placeholder="US" th:field="*{country}"/>
+	                    </div>
+	                </div>
+				</div> -->
 				
-				<div class="field">
-                    <label class="label">Date</label>
-                    <div class="control">
-                        <input class="input date" type="text" name="date" required="required" placeholder="yyyy-MM-dd HH:mm" th:field="*{date}"/>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Store Name</label>
-                    <div class="control">
-                        <input class="input" name="name" type="text" required="required" placeholder="NamaName" th:field="*{storeName}"/>
-                    </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Street Address</label>
-                    <div class="control">
-                        <input class="input" name="street" type="text" required="required" placeholder="42S, University Pl, Apt 4" th:field="*{street}" />
-                    </div>
-                </div>
-
-                <div class="field is-grouped">
-                    
-					<div class="control is-expanded">
-						<label class="label">City</label>
-                       	<input class="input" name="city" type="text" required="required" placeholder="Stillwater" th:field="*{city}" />
-                   	</div>
-                   	
-                    
-                    <div class="control">
-                    	<label class="label">Zip Code</label>
-                        <input class="input" name="code" type="text" required="required" placeholder="74075" th:field="*{code}" />
-                    </div>
-                    
-                   
-                    <div class="control is-expanded">
-                     	<label class="label">State</label>
-                        <input class="input" name="state" type="text" required="required" placeholder="Oklahoma" th:field="*{state}" />
-                    </div>
-                    
-                    
-                    <div class="control">
-                    	<label class="label">Country</label>
-                        <input class="input" name="country" type="text" required="required" placeholder="US" th:field="*{country}"/>
-                    </div>
-                </div>
+				
+				
+				
 				
 				<div class="control has-text-centered is-expanded">
 					<a class="button is-primary" id="toTable">Detail</a>
@@ -193,7 +277,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Tax:</th>
-								<td><div id="taxText"></div><input id="taxVal" class="input" type="hidden" th:field="*{totalTax}"/></td>
+								<td><div id="taxText" contenteditable="true"></div><input id="taxVal" class="input" type="hidden" th:field="*{totalTax}"/></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -203,7 +287,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Tips:</th>
-								<td><input id="tips" class="input" type="number" step="0.01" min="0" th:field="*{tips}"/></td>
+								<td id="tipCell"><input id="tips" class="input" type="number" step="0.01" min="0" th:field="*{tips}"/></td>
 								<td></td>
 								<td></td>
 							</tr>
