--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -91,7 +91,7 @@
                     <div class="field-body">
                     	<div class="field">
 		                    <div class="control is-expanded">
-		                        <input class="input" name="name" type="text" required="required" placeholder="NamaName" th:field="*{storeName}"/>
+		                        <input class="input" name="namez" type="text" required="required" placeholder="NamaName" th:field="*{storeName}"/>
 		                    </div>
 	                    </div>
 	                </div>
@@ -114,6 +114,7 @@
 				      		</div>
 			    		</div>
 					</div>
+					<a class="button" id="testing">click me</a>
 				</div>
                 
                 <div class="field is-horizontal is-grouped">
@@ -123,11 +124,11 @@
 				 	<div class="field is-narrow">
 				      	<div class="control">
 				        	<div class="select is-fullwidth">
-				         			<select>
+			         			<select>
 				           			<option>Discover</option>
 				           			<option>Chase bank</option>
 				           			<option>Chase credit</option>
-				         			</select>
+			         			</select>
 				        	</div>
 				      	</div>
 		    		</div>
@@ -147,8 +148,6 @@
 			      		</div>
 		    		</div>
 				</div>
-                
-                
                 
                 
                <!--  <div>
